issue #3 fixed command line parsing